# x11type

./: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  x11type.cc
